--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.render-pipelines.universal": "16.0.5",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.8.0",
